# website_languages_lux

./: .gitignore  README.md  pyproject.toml
output/: stats.json
script/: 00_prepare_data_lux.py  01_extract_languages_lux.py  01_extract_languages_lux.sh  02_final_data.py
website_languages_lux/: .gitignore  README.md  pyproject.toml
website_languages_lux/output/: stats.json
website_languages_lux/script/: 01_extract_languages_lux.py  01_extract_languages_lux.sh  02_final_data.py
